# spacy-fastlang

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
spacy_fastlang/: __init__.py
tests/: test_spacy_fastlang.py
