[tool.poetry]
name = "spacy_fastlang"
version = "2.0.0"
description = "Language detection using FastText and Spacy"
authors = ["Thomas Thiebaud <thiebaud.tom@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thomasthiebaud/spacy-fastlang"
repository = "https://github.com/thomasthiebaud/spacy-fastlang"
documentation = "https://github.com/thomasthiebaud/spacy-fastlang"
keywords = ["spacy", "fasttext", "language", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.6.0"
fasttext-wheel = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
